2001-07-12  OHASHI Akira  <bg66@koka-in.org>

        * elserv.el (elserv-service-directory): Fix.

2001-07-09  Yuuichi Teranishi  <teranisi@gohome.org>

	* remote.el (remote-controller): Use function system-name instead
	of variable.

	* web-custom.el (web-custom): Ditto.

	* elserv.el (elserv-parse-path): New function.
	(elserv-service): Ditto.
	(Pointed out by "OHASHI, Akira" <bg66@koka-in.org>)

	* elserv-mhc.el (elserv-mhc-face-foreground): New function.
	(elserv-mhc-face-background): Ditto.
	(elserv-mhc-string-with-face): Use above functions.
	(elserv-mhc-content): Ditto.
	(elserv-mhc-start): Use function system-name instead of variable.

2001-07-06  Yuuichi Teranishi  <teranisi@gohome.org>

	* elserv-wiki.el (elserv-wiki): Follow changes for path.

	* elserv.el (elserv-define-status-code): Renamed from
	elserv-define-result-code (All other related portions are changed).
	(elserv-moved-permanently): Renamed from elserv-moved/perm.
	(elserv-make-redirect): Follow chage above.
	(elserv-moved-found): Renamed from elserv-moved/temp.
	(elserv-see-other): Added.
	(elserv-not-modified): Ditto.
	(elserv-process-request): Added argument `request'.
	(elserv-process-filter): Follow change above.
	(elserv-call-service-function-maybe): New inline function.
	(elserv-service): Search for all hierarchies of paths.
	(elserv-service-directory): Follow change above.
	(elserv-service-function): Fixed docstring.

	* elserv-mhc.el: New file.

	* remote.el: Ditto.

	* web-custom.el: Ditto.

	* icons/Anniversary.gif: Ditto.

	* icons/Anniversary.png: Ditto.

	* icons/Birthday.gif: Ditto.

	* icons/Birthday.png: Ditto.

	* icons/Business.gif: Ditto.

	* icons/Business.png: Ditto.

	* icons/CheckBox.gif: Ditto.

	* icons/CheckBox.png: Ditto.

	* icons/CheckedBox.gif: Ditto.

	* icons/CheckedBox.png: Ditto.

	* icons/Conflict.gif: Ditto.

	* icons/Conflict.png: Ditto.

	* icons/Date.gif: Ditto.

	* icons/Date.png: Ditto.

	* icons/Holiday.gif: Ditto.

	* icons/Holiday.png: Ditto.
